--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,15 @@
 			<artifactId>selenium-chrome-driver</artifactId>
 			<version>2.53.1</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
 	</dependencies>
-
-
 </project>
