--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/autotest/Module/AlarmRule.java=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/java/alarmRuleTesttng.xml=UTF-8
 encoding/<project>=UTF-8
